crates/ksx-config/tests/snapshots/emission__default_config_shape.snap
---
source: crates/ksx-config/tests/emission.rs
expression: "toml::to_string(&ConfigFile::default()).unwrap()"
---
schema_version = 1

[settings]
block_keyboards = true
block_mice = false
mouse_move_deadzone = 5
starting_user_index = 1
